--- a/index.html
+++ b/index.html
@@ -11,38 +11,46 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form>
 
 
       <!-- Add a label for 'fullname'-->
+      <label for="fullname">Full Name</label>
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
+      <input type="text" id="fullname" placeholder="Enter Name" required>
 
 
       <!-- Add a label for 'email'-->
+      <label for="email">Email</label>
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input type="email" id="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
+      <label for="phone">Phone Number</label>
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
 
       <!-- Add a label for 'message'-->
+      <label for="message">Message</label>
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <textarea name="message" id="message" placeholder="Enter Message"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
+      <label for="checkbox">Checkbox</label>
+      <input type="checkbox" id="checkbox">
 
       <!-- Add an input with the type set to 'submit' -->
+      <input type="submit" id="submit">
 
+  </form>
     
   </body>
 </html>
